--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,27 @@
 {
-  "exclude": ["./cypress", "./cypress.config.ts"],
-  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": [
+    "./cypress",
+    "./cypress.config.ts"
+  ],
+  "include": [
+    "remix.env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "cypress/support/e2e.js",
+    "cypress/e2e/smoke.cy.js",
+    "cypress/support/delete-user.js",
+    "cypress/support/commands.js",
+    "cypress/support/create-user.js"
+  ],
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ES2019"],
-    "types": ["vitest/globals"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES2019"
+    ],
+    "types": [
+      "vitest/globals"
+    ],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
@@ -16,10 +34,11 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": [
+        "./app/*"
+      ]
     },
     "skipLibCheck": true,
-
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
   }
